# Space_game

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING  CONTRIBUTING.md  LICENSE  README  README.md  build.sh  build_run.sh  config.ini  run.sh  run_tests.sh
resources/meshes/: cube.mesh  icosagon.mesh  square.mesh
resources/shaders/: color.vert  placeholder.frag  placeholder.vert  texture.frag  texture.vert  uv.frag  uv.vert
src/Event/: event.hpp
src/Game/: Components_Events.hpp  Game.cpp  Game.hpp  systems.cpp  systems.hpp
src/Game/systems/: AIControllerSystem.cpp  AIControllerSystem.hpp  AngleSystem.cpp  AngleSystem.hpp  BoidSystem.cpp  BoidSystem.hpp  CameraController.cpp  CameraController.hpp  CollisionSystem.cpp  CollisionSystem.hpp  DamageSystem.cpp  DamageSystem.hpp  EntityCreationSystem.cpp  EntityCreationSystem.hpp  FiringSystem.cpp  FiringSystem.hpp  GravitySystem.cpp  GravitySystem.hpp  HealthSystem.cpp  HealthSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  PlayerSystem.cpp  PlayerSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SpawnerSystem.cpp  SpawnerSystem.hpp
src/datastructures/: hashmap.hpp
src/ecs/: ComponentManager.cpp  ComponentManager.h  ComponentManager.hpp  Components.h  Components.hpp  Entity.hpp  EntityManager.cpp  EntityManager.h  EntityManager.hpp  MemoryManager.cpp  MemoryManager.h  MemoryManager.hpp  Registry.cpp  Registry.h  Registry.hpp  Signature.h  Signature.hpp  SystemManager.cpp  SystemManager.hpp  View.hpp  View_Groups.hpp  component_arrays.hpp  ecs.h  ecs.hpp  ecs_assert.h  ecs_assert.hpp  ecs_constants.h  ecs_constants.hpp  globals.h  globals.hpp  system.hpp
src/ecs/systems/: health_system.cpp  health_system.hpp
src/files/: Camera.cpp  Camera.hpp  Components.hpp  Components_Events.hpp  Config.cpp  Config.hpp  EntryPoint.hpp  Game.cpp  Game.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Memory_arena.cpp  Memory_arena.hpp  Real.hpp  RenderSystem.cpp  RenderSystem.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp  Texture.hpp  Time.hpp  assert.hpp  core.cpp  core.hpp  deltatime.cpp  deltatime.hpp  ecs.cpp  ecs.hpp  int.hpp  utils.cpp  utils.hpp
src/files/Application/: Application.cpp  Application.hpp
src/files/Renderer/: IndexBuffer.cpp  IndexBuffer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexLayout.cpp  VertexLayout.hpp
src/files/asset/: Texture.cpp  Texture.hpp  asset.cpp  asset.hpp  mesh.cpp  mesh.hpp
src/files/core/: Application.cpp  Application.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  core.cpp  core.hpp  window.cpp  window.hpp
src/files/core/loadgl/: gl_funcs.hpp  load_gl.cpp  load_gl.hpp
src/files/datastructures/: hashmap.hpp
src/files/ecs/: ComponentManager.cpp  ComponentManager.hpp  Components.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EventManager.cpp  EventManager.hpp  MemoryManager.cpp  MemoryManager.hpp  Registry.cpp  Registry.hpp  Signature.hpp  SystemManager.cpp  SystemManager.hpp  View_Groups.hpp  component_arrays.hpp  ecs.cpp  ecs.hpp  ecs_assert.hpp  ecs_constants.hpp  globals.hpp  iter.hpp  system.hpp
src/files/ecs/systems/: health_system.cpp  health_system.hpp
src/files/input/: Input.cpp  Input.hpp  KeyCodes.hpp
src/files/math/: math_types.cpp  math_types.hpp
src/files/platform/: deltatime.cpp  deltatime.hpp  linux_layer.hpp  memory_map.cpp  memory_map.hpp  platform.cpp  platform.hpp  win_layer.hpp
src/files/platform/linux/: lin_deltatime.cpp  lin_deltatime.hpp  linux_layer.cpp  linux_layer.hpp
src/files/platform/win64/: win64_layer.cpp  win64_layer.hpp  win_deltatime.cpp  win_deltatime.hpp  win_init.cpp  win_init.hpp  win_memory_map.cpp  win_memory_map.hpp
src/files/scene/: Camera.cpp  Camera.hpp  component.cpp  component.hpp  iter.hpp  scene.hpp
src/files/systems/: AIControllerSystem.cpp  AIControllerSystem.hpp  AngleSystem.cpp  AngleSystem.hpp  BoidSystem.cpp  BoidSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  EntityCreationSystem.cpp  EntityCreationSystem.hpp  GravitySystem.cpp  GravitySystem.hpp  MovementSystem.cpp  MovementSystem.hpp  PlayerSystem.cpp  PlayerSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  TrackSystem.cpp  TrackSystem.hpp
src/main/: Main.cpp
test/: MemoryManager_test.cpp  MemoryManager_test.h  main.cpp  test.cpp
test/tests/: ComponentManager_test.cpp  ComponentManager_test.hpp  ecs_view_test.hpp  memory_alloc.hpp  memory_double_init.hpp  output_ComponentManager_test.txt  output_ecs_view_test.txt  output_memory_alloc.txt  output_memory_double_init.txt
